# bits-and-pieces

./: Preferences.sublime-settings  bashrc  dot-tmux.conf  gdbinit  gitconfig  post-install-setup.md  qt-4.8.4.suppressions  tmux.conf  vimrc  zshrc
articles/: relational-dbms-comparison.html
code/: demangle.h  factory-with-mpl.cpp  loop-cache-end-iterator.cpp  makefile  path-finding.cpp  perf-test.h
code/boost-python-proto/: python-api.cpp
code/cmake-proto/: CMakeLists.txt
code/cmake-proto/build-scripts/: build.py  up-to-date-check.sh  verify-src-list.sh
code/cmake-proto/include/: a.h  bc.h
code/cmake-proto/src/: CMakeLists.txt  a.cpp  b.cpp  c.cpp  main.cpp
code/does-flto-do-function-inlining/: function.cpp  function.h  makefile  test.cpp
code/fusion_find_if/: fusion_find_if.h  ut_fusion_find_if.cpp
code/snippets/: darken-bookmarklet.js  istream-reading-done-correctly  istream-reading-done-correctly.cpp  private-virtual-idiom.cpp
code/tests/: test-boost-enable-if.cpp  test-boost-unique-ptr.cpp  test-function-default-template-arg.cpp  test-signals-slots.cpp
how-to/: post-install-setup.md  ssh-client-terminate-connection.md  view-code-as-assembler.md
notes/: apple-iOS-applications.md  improving-git-history-readability.mdown  positive-mindfulness.mdown
scripts/: get-latest-svn-branch-committers.hs  sdiffy  shell_ci.sh
sublime-plugins/: goto_selected_file.py
sublime-plugins/GdbBacktrace/: GdbBacktrace.YAML-tmLanguage  GdbBacktrace.tmLanguage
tmux/: basic.sh  tmux.conf
